# lending-backend/internal/app/router.go
@@ -10,34 +10,37 @@ import (
 )
 
 func NewRouter(
-	   system *api.APIHandler,
-    users *api.UserHandler,
-    loans *api.LoanHandler,
-    items *api.ItemHandler,
-) http.Handler{
- 	r := mux.NewRouter()
+	system *api.APIHandler,
+	users *api.UserHandler,
+	loans *api.LoanHandler,
+	items *api.ItemHandler,
+) http.Handler {
+	r := mux.NewRouter()
 
-    // System
-    r.HandleFunc("/api/health", system.HealthCheck).Methods("GET")
-    r.HandleFunc("/api/status", system.GetSystemStatus).Methods("GET")
+	// System
+	r.HandleFunc("/api/health", system.HealthCheck).Methods("GET")
+	r.HandleFunc("/api/status", system.GetSystemStatus).Methods("GET")
 
-    // Users
-    r.HandleFunc("/api/users", users.CreateUser).Methods("POST")
-    r.HandleFunc("/api/users/{user_id:[0-9]+}", users.GetUserByID).Methods("GET")
-    r.HandleFunc("/api/users/{username:[^/]+}", users.GetUserByName).Methods("GET")
-    r.HandleFunc("/api/users/{user_id}/loans", loans.GetUserActiveLoans).Methods("GET")
+	// Users
+	r.HandleFunc("/api/users", users.CreateUser).Methods("POST")
+	r.HandleFunc("/api/users/{user_id:[0-9]+}", users.GetUserByID).Methods("GET")
+	r.HandleFunc("/api/users/{username:[^/]+}", users.GetUserByName).Methods("GET")
+	r.HandleFunc("/api/users/{user_id}/loans", loans.GetUserActiveLoans).Methods("GET")
 
-    // Items
-    r.HandleFunc("/api/items", items.GetAllItems).Methods("GET")
-    r.HandleFunc("/api/items", items.CreateItem).Methods("POST")
-    r.HandleFunc("/api/items/{object_id}", items.GetItemByID).Methods("GET")
-    r.HandleFunc("/api/items/{object_id}", items.UpdateItem).Methods("PUT")
-    r.HandleFunc("/api/items/{object_id}/image", items.UploadItemImage).Methods("POST")
-    r.HandleFunc("/api/items/media", items.UploadItemMedia).Methods("POST")
-    // r.HandleFunc("/api/items/{object_id}/video")
+	// Items
+	r.HandleFunc("/api/items", items.GetAllItems).Methods("GET")
+	r.HandleFunc("/api/items", items.CreateItem).Methods("POST")
+	r.HandleFunc("/api/items/{object_id}", items.GetItemByID).Methods("GET")
+	r.HandleFunc("/api/items/{object_id}", items.UpdateItem).Methods("PUT")
+	r.HandleFunc("/api/items/{object_id}/image", items.UploadItemImage).Methods("POST")
+	r.HandleFunc("/api/items/media", items.UploadItemMedia).Methods("POST")
+	// r.HandleFunc("/api/items/{object_id}/video")
 
-    // Swagger
-    r.PathPrefix("/swagger/").Handler(httpSwagger.WrapHandler)
+	// loan
+	r.HandleFunc("/api/loans/items/history/{object_id}", loans.GetLoanHistoryByItemID).Methods("GET")
 
-    return cors.AllowAll().Handler(r)
+	// Swagger
+	r.PathPrefix("/swagger/").Handler(httpSwagger.WrapHandler)
+
+	return cors.AllowAll().Handler(r)
 }
